Comment out Helvetica font due to vertical alignment issues.

--- a/WebUi/wwwroot/css/app.css
+++ b/WebUi/wwwroot/css/app.css
@@ -2,7 +2,9 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Arial, sans-serif;
+    /* Helvetica* does not center vertically in Firefox. */
+    /* font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; */
 }
 
 a, .btn-link {
